--- a/index.html
+++ b/index.html
@@ -123,14 +123,14 @@
             <div class="col 15 black"></div>
             <div class="col 16 black"></div>
             <div class="col 17 black"></div>
-            <div class="col 18"></div>
-            <div class="col 19"></div>
-            <div class="col 20"></div>
-            <div class="col 21"></div>
-            <div class="col 22"></div>
-            <div class="col 23"></div>
-            <div class="col 24"></div>
-            <div class="col 25"></div>
+            <div class="col 18 light-brw"></div>
+            <div class="col 19 light-brw"></div>
+            <div class="col 20 light-brw"></div>
+            <div class="col 21 light-brw"></div>
+            <div class="col 22 light-brw"></div>
+            <div class="col 23 light-brw"></div>
+            <div class="col 24 light-brw"></div>
+            <div class="col 25 light-brw"></div>
             <div class="col 26 black"></div>
             <div class="col 27 black"></div>
             <div class="col 28"></div>
@@ -168,18 +168,18 @@
             <div class="col 13 black"></div>
             <div class="col 14 black"></div>
             <div class="col 15 black"></div>
-            <div class="col 16"></div>
-            <div class="col 17"></div>
-            <div class="col 18"></div>
-            <div class="col 19"></div>
-            <div class="col 20"></div>
-            <div class="col 21"></div>
-            <div class="col 22"></div>
-            <div class="col 23"></div>
-            <div class="col 24"></div>
-            <div class="col 25"></div>
-            <div class="col 26"></div>
-            <div class="col 27"></div>
+            <div class="col 16 light-brw"></div>
+            <div class="col 17 light-brw"></div>
+            <div class="col 18 light-brw"></div>
+            <div class="col 19 light-brw"></div>
+            <div class="col 20 light-brw"></div>
+            <div class="col 21 light-brw"></div>
+            <div class="col 22 light-brw"></div>
+            <div class="col 23 light-brw"></div>
+            <div class="col 24 light-brw"></div>
+            <div class="col 25 light-brw"></div>
+            <div class="col 26 light-brw"></div>
+            <div class="col 27 light-brw"></div>
             <div class="col 28 black"></div>
             <div class="col 29 black"></div>
             <div class="col 30"></div>
@@ -213,22 +213,22 @@
             <div class="col 11 black"></div>
             <div class="col 12 black"></div>
             <div class="col 13 black"></div>
-            <div class="col 14"></div>
-            <div class="col 15"></div>
-            <div class="col 16"></div>
-            <div class="col 17"></div>
-            <div class="col 18"></div>
-            <div class="col 19"></div>
-            <div class="col 20"></div>
-            <div class="col 21"></div>
-            <div class="col 22"></div>
-            <div class="col 23"></div>
-            <div class="col 24"></div>
-            <div class="col 25"></div>
-            <div class="col 26"></div>
-            <div class="col 27"></div>
-            <div class="col 28"></div>
-            <div class="col 29"></div>
+            <div class="col 14 light-brw"></div>
+            <div class="col 15 light-brw"></div>
+            <div class="col 16 light-brw"></div>
+            <div class="col 17 light-brw"></div>
+            <div class="col 18 light-brw"></div>
+            <div class="col 19 light-brw"></div>
+            <div class="col 20 light-brw"></div>
+            <div class="col 21 light-brw"></div>
+            <div class="col 22 light-brw"></div>
+            <div class="col 23 light-brw"></div>
+            <div class="col 24 light-brw"></div>
+            <div class="col 25 light-brw"></div>
+            <div class="col 26 light-brw"></div>
+            <div class="col 27 light-brw"></div>
+            <div class="col 28 light-brw"></div>
+            <div class="col 29 light-brw"></div>
             <div class="col 30 black"></div>
             <div class="col 31 black"></div>
             <div class="col 32 black"></div>
@@ -256,31 +256,31 @@
             <div class="col 7 black"></div>
             <div class="col 8 black"></div>
             <div class="col 9 black"></div>
-            <div class="col 10"></div>
-            <div class="col 11"></div>
-            <div class="col 12"></div>
-            <div class="col 13"></div>
-            <div class="col 14"></div>
-            <div class="col 15"></div>
-            <div class="col 16"></div>
-            <div class="col 17"></div>
-            <div class="col 18"></div>
-            <div class="col 19"></div>
-            <div class="col 20"></div>
-            <div class="col 21"></div>
-            <div class="col 22"></div>
-            <div class="col 23"></div>
-            <div class="col 24"></div>
-            <div class="col 25"></div>
-            <div class="col 26"></div>
-            <div class="col 27"></div>
-            <div class="col 28"></div>
-            <div class="col 29"></div>
-            <div class="col 30"></div>
-            <div class="col 31"></div>
-            <div class="col 32"></div>
-            <div class="col 33"></div>
-            <div class="col 34"></div>
+            <div class="col 10 dark-brw"></div>
+            <div class="col 11 dark-brw"></div>
+            <div class="col 12 dark-brw"></div>
+            <div class="col 13 dark-brw"></div>
+            <div class="col 14 light-brw"></div>
+            <div class="col 15 light-brw"></div>
+            <div class="col 16 light-brw"></div>
+            <div class="col 17 light-brw"></div>
+            <div class="col 18 light-brw"></div>
+            <div class="col 19 light-brw"></div>
+            <div class="col 20 light-brw"></div>
+            <div class="col 21 light-brw"></div>
+            <div class="col 22 light-brw"></div>
+            <div class="col 23 light-brw"></div>
+            <div class="col 24 light-brw"></div>
+            <div class="col 25 light-brw"></div>
+            <div class="col 26 light-brw"></div>
+            <div class="col 27 light-brw"></div>
+            <div class="col 28 light-brw"></div>
+            <div class="col 29 light-brw"></div>
+            <div class="col 30 light-brw"></div>
+            <div class="col 31 dark-brw"></div>
+            <div class="col 32 dark-brw"></div>
+            <div class="col 33 dark-brw"></div>
+            <div class="col 34 dark-brw"></div>
             <div class="col 35 black"></div>
             <div class="col 36 black"></div>
             <div class="col 37"></div>
