--- a/index.html
+++ b/index.html
@@ -578,17 +578,17 @@
         <div id="line-13" class="row">
             <div class="col 1">13</div>
             <div class="col 2 black"></div>
-            <div class="col 3"></div>
-            <div class="col 4"></div>
-            <div class="col 5"></div>
-            <div class="col 6"></div>
-            <div class="col 7"></div>
-            <div class="col 8"></div>
-            <div class="col 9"></div>
+            <div class="col 3 dark-brw"></div>
+            <div class="col 4 dark-brw"></div>
+            <div class="col 5 dark-brw"></div>
+            <div class="col 6 dark-brw"></div>
+            <div class="col 7 dark-brw"></div>
+            <div class="col 8 dark-brw"></div>
+            <div class="col 9 dark-brw"></div>
             <div class="col 10 black"></div>
-            <div class="col 11"></div>
-            <div class="col 12"></div>
-            <div class="col 13"></div>
+            <div class="col 11 light-brw"></div>
+            <div class="col 12 light-brw"></div>
+            <div class="col 13 light-brw"></div>
             <div class="col 14 black"></div>
             <div class="col 15"></div>
             <div class="col 16"></div>
@@ -596,9 +596,9 @@
             <div class="col 18 black"></div>
             <div class="col 19"></div>
             <div class="col 20 black"></div>
-            <div class="col 21"></div>
-            <div class="col 22"></div>
-            <div class="col 23"></div>
+            <div class="col 21 light-brw"></div>
+            <div class="col 22 light-brw"></div>
+            <div class="col 23 light-brw"></div>
             <div class="col 24 black"></div>
             <div class="col 25"></div>
             <div class="col 26 black"></div>
@@ -606,16 +606,16 @@
             <div class="col 28"></div>
             <div class="col 29"></div>
             <div class="col 30 black"></div>
-            <div class="col 31"></div>
-            <div class="col 32"></div>
-            <div class="col 33"></div>
+            <div class="col 31 light-brw"></div>
+            <div class="col 32 light-brw"></div>
+            <div class="col 33 light-brw"></div>
             <div class="col 34 black"></div>
-            <div class="col 35"></div>
-            <div class="col 36"></div>
-            <div class="col 37"></div>
-            <div class="col 38"></div>
-            <div class="col 39"></div>
-            <div class="col 40"></div>
+            <div class="col 35 dark-brw"></div>
+            <div class="col 36 dark-brw"></div>
+            <div class="col 37 dark-brw"></div>
+            <div class="col 38 dark-brw"></div>
+            <div class="col 39 dark-brw"></div>
+            <div class="col 40 dark-brw"></div>
             <div class="col 41  black"></div>
             <div class="col 42"></div>
             <div class="col 43"></div>
@@ -625,17 +625,17 @@
         <div id="line-14" class="row">
             <div class="col 1">14</div>
             <div class="col 2 black"></div>
-            <div class="col 3"></div>
-            <div class="col 4"></div>
-            <div class="col 5"></div>
-            <div class="col 6"></div>
-            <div class="col 7"></div>
-            <div class="col 8"></div>
+            <div class="col 3 dark-brw"></div>
+            <div class="col 4 dark-brw"></div>
+            <div class="col 5 dark-brw"></div>
+            <div class="col 6 dark-brw"></div>
+            <div class="col 7 dark-brw"></div>
+            <div class="col 8 dark-brw"></div>
             <div class="col 9 black"></div>
             <div class="col 10 black"></div>
-            <div class="col 11"></div>
-            <div class="col 12"></div>
-            <div class="col 13"></div>
+            <div class="col 11 light-brw"></div>
+            <div class="col 12 light-brw"></div>
+            <div class="col 13 light-brw"></div>
             <div class="col 14 black"></div>
             <div class="col 15"></div>
             <div class="col 16"></div>
@@ -643,9 +643,9 @@
             <div class="col 18 black"></div>
             <div class="col 19"></div>
             <div class="col 20 black"></div>
-            <div class="col 21"></div>
-            <div class="col 22"></div>
-            <div class="col 23"></div>
+            <div class="col 21 light-brw"></div>
+            <div class="col 22 light-brw"></div>
+            <div class="col 23 light-brw"></div>
             <div class="col 24 black"></div>
             <div class="col 25"></div>
             <div class="col 26 black"></div>
@@ -653,16 +653,16 @@
             <div class="col 28"></div>
             <div class="col 29"></div>
             <div class="col 30 black"></div>
-            <div class="col 31"></div>
-            <div class="col 32"></div>
-            <div class="col 33"></div>
-            <div class="col 34"></div>
+            <div class="col 31 light-brw"></div>
+            <div class="col 32 light-brw"></div>
+            <div class="col 33 light-brw"></div>
+            <div class="col 34 light-brw"></div>
             <div class="col 35 black"></div>
-            <div class="col 36"></div>
-            <div class="col 37"></div>
-            <div class="col 38"></div>
-            <div class="col 39"></div>
-            <div class="col 40"></div>
+            <div class="col 36 dark-brw"></div>
+            <div class="col 37 dark-brw"></div>
+            <div class="col 38 dark-brw"></div>
+            <div class="col 39 dark-brw"></div>
+            <div class="col 40 dark-brw"></div>
             <div class="col 41 black"></div>
             <div class="col 42"></div>
             <div class="col 43"></div>
